<resources>
    <string name="app_name">Justice Tarot</string>
    <string name="deck_reference">Deck Reference</string>
    <string name="single_card">Single Card</string>
    <string name="two_card">Two Card</string>
    <string name="past_present_future">Past, Present &amp; Future</string>
    <string name="four_card">Four Card</string>
    <string name="relationship_spread">Relationship Spread</string>
    <string name="celtic_cross">Celtic Cross</string>
    <string name="new_year">New Year</string>
    <string name="new_moon">New Moon</string>
    <string name="full_moon">Full Moon</string>
    <string name="mercury_retrograde">Mercury Retrograde</string>
    <string name="a_00_fool">Fool</string>
    <string name="a_01_magus">Magus</string>
    <string name="a_02_priestess">Priestess</string>
    <string name="a_03_empress">Empress</string>
    <string name="a_04_emperor">Emperor</string>
    <string name="a_05_hierophant">Hierophant</string>
    <string name="a_06_lovers">Lovers</string>
    <string name="a_07_chariot">Chariot</string>
    <string name="a_08_adjustment">Adjustment</string>
    <string name="a_09_hermit">Hermit</string>
    <string name="a_10_fortune">Fortune</string>
    <string name="a_11_lust">Lust</string>
    <string name="a_12_hanged_man">Hanged Man</string>
    <string name="a_13_death">Death</string>
    <string name="a_14_art">Art</string>
    <string name="a_15_devil">Devil</string>
    <string name="a_16_tower">Tower</string>
    <string name="a_17_star">Star</string>
    <string name="a_18_moon">Moon</string>
    <string name="a_19_sun">Sun</string>
    <string name="a_20_aeon">Aeon</string>
    <string name="a_21_universe">Universe</string>
    <string name="cups_01">Ace of Cups</string>
    <string name="cups_02">2 of Cups (Love)</string>
    <string name="cups_03">3 of Cups (Abundance)</string>
    <string name="cups_04">4 of Cups (Luxury)</string>
    <string name="cups_05">5 of Cups (Disappointment)</string>
    <string name="cups_06">6 of Cups (Pleasure)</string>
    <string name="cups_07">7 of Cups (Debauch)</string>
    <string name="cups_08">8 of Cups (Indolence)</string>
    <string name="cups_09">9 of Cups (Happiness)</string>
    <string name="cups_10">10 of Cups (Satiety)</string>
    <string name="cups_princess">Princess of Cups</string>
    <string name="cups_prince">Prince of Cups</string>
    <string name="cups_queen">Queen of Cups</string>
    <string name="cups_knight">Knight of Cups</string>
    <string name="disks_01">Ace of Disks</string>
    <string name="disks_02">2 of Disks (Change)</string>
    <string name="disks_03">3 of Disks (Works)</string>
    <string name="disks_04">4 of Disks (Power)</string>
    <string name="disks_05">5 of Disks (Worry)</string>
    <string name="disks_06">6 of Disks (Success)</string>
    <string name="disks_07">7 of Disks (Failure)</string>
    <string name="disks_08">8 of Disks (Prudence)</string>
    <string name="disks_09">9 of Disks (Gain)</string>
    <string name="disks_10">10 of Disks (Wealth)</string>
    <string name="disks_princess">Princess of Disks</string>
    <string name="disks_prince">Prince of Disks</string>
    <string name="disks_queen">Queen of Disks</string>
    <string name="disks_knight">Knight of Disks</string>
    <string name="swords_01">Ace of Swords</string>
    <string name="swords_02">2 of Swords (Peace)</string>
    <string name="swords_03">3 of Swords (Sorrow)</string>
    <string name="swords_04">4 of Swords (Truce)</string>
    <string name="swords_05">5 of Swords (Defeat)</string>
    <string name="swords_06">6 of Swords (Science)</string>
    <string name="swords_07">7 of Swords (Futility)</string>
    <string name="swords_08">8 of Swords (Interference)</string>
    <string name="swords_09">9 of Swords (Cruelty)</string>
    <string name="swords_10">10 of Swords (Ruin)</string>
    <string name="swords_princess">Princess of Swords</string>
    <string name="swords_prince">Prince of Swords</string>
    <string name="swords_queen">Queen of Swords</string>
    <string name="swords_knight">Knight of Swords</string>
    <string name="wands_01">Ace of Wands</string>
    <string name="wands_02">2 of Wands (Dominion)</string>
    <string name="wands_03">3 of Wands (Virtue)</string>
    <string name="wands_04">4 of Wands (Completion)</string>
    <string name="wands_05">5 of Wands (Strife)</string>
    <string name="wands_06">6 of Wands (Victory)</string>
    <string name="wands_07">7 of Wands (Valor)</string>
    <string name="wands_08">8 of Wands (Swiftness)</string>
    <string name="wands_09">9 of Wands (Strength)</string>
    <string name="wands_10">10 of Wands (Oppression)</string>
    <string name="wands_princess">Princess of Wands</string>
    <string name="wands_prince">Prince of Wands</string>
    <string name="wands_queen">Queen of Wands</string>
    <string name="wands_knight">Knight of Wands</string>
    <string name="a_00_fool_keywords">beginnings, innocence, spontaneity, a free spirit|holding back, recklessness, risk-taking</string>
    <string name="a_01_magus_keywords">manifestation, resourcefulness, power, inspired action|manipulation, poor planning, untapped talents</string>
    <string name="a_02_priestess_keywords">intuition, sacred knowledge, divine feminine, subconscious mind|secrets, disconnected intuition, withdrawal, silence</string>
    <string name="a_03_empress_keywords">femininity, beauty, nature, nurturing, abundance|creative block, dependence on others</string>
    <string name="a_04_emperor_keywords">authority, establishment, structure, a father figure|domination, excessive control, lack of discipline, inflexibility</string>
    <string name="a_05_hierophant_keywords">spiritual wisdom, religious beliefs, conformity, tradition, institutions|personal beliefs, freedom, challenging the status quo</string>
    <string name="a_06_lovers_keywords">love, harmony, relationships, values alignment, choices|self-love, disharmony, imbalance, misalignment of values</string>
    <string name="a_07_chariot_keywords">control, willpower, success, action, determination|self-discipline, opposition, lack of direction</string>
    <string name="a_08_adjustment_keywords">strength, courage, persuasion, influence, compassion|inner strength, self-doubt, low energy, raw emotion</string>
    <string name="a_09_hermit_keywords">soul-searching, introspection, being alone, inner guidance|isolation, loneliness, withdrawal</string>
    <string name="a_10_fortune_keywords">good luck, karma, life cycles, destiny, a turning point|bad luck, resistance to change, breaking cycles</string>
    <string name="a_11_lust_keywords">justice, fairness, truth, cause and effect, law|unfairness, lack of accountability, dishonesty</string>
    <string name="a_12_hanged_man_keywords">pause, surrender, letting go, new perspectives|delays, resistance, stalling, indecision</string>
    <string name="a_13_death_keywords">endings, change, transformation, transition|resistance to change, personal transformation, inner purging</string>
    <string name="a_14_art_keywords">balance, moderation, patience, purpose|imbalance, excess, self-healing, re-alignment</string>
    <string name="a_15_devil_keywords">shadow self, attachment, addiction, restriction, sexuality|limiting beliefs, dark thoughts, detachment</string>
    <string name="a_16_tower_keywords">sudden change, upheaval, chaos, revelation, awakening|personal transformation, fear of change, averting disaster</string>
    <string name="a_17_star_keywords">hope, faith, purpose, renewal, spirituality|lack of faith, despair, self-trust, disconnection</string>
    <string name="a_18_moon_keywords">illusion, fear, anxiety, subconscious, intuition|release of fear, repressed emotion, inner confusion</string>
    <string name="a_19_sun_keywords">positivity, fun, warmth, success, vitality|inner child, feeling down, overly optimistic</string>
    <string name="a_20_aeon_keywords">judgement, rebirth, inner calling, absolution|self-doubt, inner critic, ignoring the call</string>
    <string name="a_21_universe_keywords">completion, integration, accomplishment, travel|seeking closure, short-cuts, delays</string>
    <string name="cups_01_keywords">love, new relationships, compassion, creativity|self-love, intuition, repressed emotions</string>
    <string name="cups_02_keywords">unified love, partnership, mutual attraction|self-love, break-ups, disharmony, distrust</string>
    <string name="cups_03_keywords">celebration, friendship, creativity, collaborations|independence, alone time, hardcore partying, ‘three’s a crowd’</string>
    <string name="cups_04_keywords">meditation, contemplation, apathy, reevaluation|retreat, withdrawal, checking in for alignment</string>
    <string name="cups_05_keywords">regret, failure, disappointment, pessimism|personal setbacks, self-forgiveness, moving on</string>
    <string name="cups_06_keywords">revisiting the past, childhood memories, innocence, joy|living in the past, forgiveness, lacking playfulness</string>
    <string name="cups_07_keywords">opportunities, choices, wishful thinking, illusion|alignment, personal values, overwhelmed by choices</string>
    <string name="cups_08_keywords">disappointment, abandonment, withdrawal, escapism|trying one more time, indecision, aimless drifting, walking away</string>
    <string name="cups_09_keywords">contentment, satisfaction, gratitude, wish come true|inner happiness, materialism, dissatisfaction, indulgence</string>
    <string name="cups_10_keywords">divine love, blissful relationships, harmony, alignment|disconnection, misaligned values, struggling relationships</string>
    <string name="cups_princess_keywords">creative opportunities, intuitive messages, curiosity, possibility|new ideas, doubting intuition, creative blocks, emotional immaturity</string>
    <string name="cups_prince_keywords">creativity, romance, charm, imagination, beauty|overactive imagination, unrealistic, jealous, moody</string>
    <string name="cups_queen_keywords">compassionate, caring, emotionally stable, intuitive, in flow|inner feelings, self-care, self-love, co-dependency</string>
    <string name="cups_knight_keywords">emotionally balanced, compassionate, diplomatic|self-compassion, inner feelings, moodiness, emotionally manipulative</string>
    <string name="disks_01_keywords">new financial or career opportunity, manifestation, abundance|lost opportunity, lack of planning and foresight</string>
    <string name="disks_02_keywords">multiple priorities, time management, prioritisation, adaptability|over-committed, disorganisation, prioritization</string>
    <string name="disks_03_keywords">teamwork, collaboration, learning, implementation|disharmony, misalignment, working alone</string>
    <string name="disks_04_keywords">saving money, security, conservatism, scarcity, control|over-spending, greed, self-protection</string>
    <string name="disks_05_keywords">financial loss, poverty, lack mindset, isolation, worry|recovery from financial loss, spiritual poverty</string>
    <string name="disks_06_keywords">giving, receiving, sharing wealth, generosity, charity|self-care, unpaid debts, one-sided charity</string>
    <string name="disks_07_keywords">long-term view, sustainable results, perseverance, investment|lack of long-term vision, limited success or reward</string>
    <string name="ace">Ace</string>
    <string name="princess">Princess</string>
    <string name="prince">Prince</string>
    <string name="queen">Queen</string>
    <string name="knight">Knight</string>
    <string name="change">Change</string>
    <string name="dominion">Dominion</string>
    <string name="virtue">Virtue</string>
    <string name="completion">Completion</string>
    <string name="strife">Strife</string>
    <string name="victory">Victory</string>
    <string name="valor">Valor</string>
    <string name="swiftness">Swiftness</string>
</resources>